source file updated

--- a/src/hospital_los_regressor.ipynb
+++ b/src/hospital_los_regressor.ipynb
@@ -14,8 +14,7 @@
     "\n",
     "**Disclaimer:**\n",
     "\n",
-    "- The notebook is provided \"as is\", without warranty of any kind. The author is\n",
-    "  not liable for any claims or damages arising from the use of this notebook.\n",
+    "- The notebook is provided \"as is\", without warranty of any kind. The author is not liable for any claims or damages arising from the use of this notebook.\n",
     "\n",
     "**Dataset Note:**\n",
     "\n",
@@ -1638,29 +1637,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "8f24f928",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/miguel/venvs/py-env/bin/python\n",
-      "2.4.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sys\n",
-    "print(sys.executable)  \n",
-    "import numpy\n",
-    "print(numpy.__version__)  # Should print 1.26.4\n",
-    "import pandas as pd\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "8c1c66ec",
    "metadata": {},
@@ -2117,20 +2093,11 @@
    "id": "c4e31fac",
    "metadata": {},
    "source": [
-    "### Data cleaning overview\n",
+    "### Data Cleaning Overview\n",
     "\n",
-    "Cleaning decisions are intentionally minimalist and guided by reproducibility \n",
-    "and transparency.  \n",
+    "Data cleaning decisions were intentionally minimalist and guided by reproducibility and transparency. No rows were removed during structural cleaning or categorical normalization steps. However, a small number of observations were excluded during target variable preparation when `length_of_stay` values could not be coerced to valid numeric form. This step ensures a well-defined outcome variable while preserving the vast majority of the original empirical distribution.\n",
     "\n",
-    "- Columns with no informational content: zero. Absence of fully empty columns \n",
-    "(no removals).\n",
-    "- String normalization, including trimming whitespace and replacing non-breaking \n",
-    "spaces, successfully eliminated all leading/trailing inconsistencies across \n",
-    "categorical variables, preventing artificial category inflation.  \n",
-    "- No rows were deleted, preserving the original empirical distribution and \n",
-    "ensuring that all observed variation in patient characteristics, clinical \n",
-    "measures, and financial outcomes remains intact.  \n",
-    "- Convert numeric columns properly.\n",
+    "All remaining observations retain their original patient, admission, and facility-level characteristics.\n",
     "\n",
     "This approach ensures that the dataset is structurally sound, consistent, \n",
     "and ready for robust exploratory and predictive analyses without introducing bias through overzealous cleaning.\n"
@@ -2364,12 +2331,7 @@
    "id": "c8a34d7a",
    "metadata": {},
    "source": [
-    "Length of Stay (LOS) ('length_of_stay') shows marked right-skewness\n",
-    "(skew=5.35), reflecting the prevalence of short hospitalizations alongside \n",
-    "prolonged cases due to clinical complexity. The np.log1p transformation \n",
-    "effectively normalizes the distribution (skew=0.85), reducing variance \n",
-    "heteroscedasticity and enabling linear models with economically meaningful \n",
-    "percentage interpretations."
+    "Length of Stay (LOS) (length_of_stay) shows marked right-skewness (skew = 4.69), reflecting the prevalence of short hospitalizations alongside a smaller number of prolonged stays associated with higher clinical complexity. The np.log1p transformation substantially reduces this skewness (skew = 0.83), yielding a distribution much closer to symmetry. This transformation mitigates heteroscedasticity and improves the suitability of linear modeling approaches, while allowing coefficient interpretations in terms of approximate percentage changes in LOS."
    ]
   },
   {
@@ -2427,7 +2389,9 @@
    "source": [
     "### Outliers treatment overview\n",
     "\n",
-    "After leakage removal, only `length_of_stay` remains as a continuous target in `df_clean` (min=0, max=∞, skew=4.69). Applied 99th percentile caps (max → 14.5 days) to mitigate 0.3% extreme outliers while preserving 99.7% of empirical distribution. Note: `total_charges`/`total_costs` were previously dropped as hard leakage and are unavailable for modeling.\n"
+    "After leakage removal, `length_of_stay` is the only continuous outcome retained in `df_clean`. The variable exhibits substantial right-skewness (skew = **4.69**), with a long upper tail reflecting a small number of prolonged hospitalizations. To reduce the influence of extreme values while preserving the overall empirical distribution, **IQR-based winsorization (1.5 × IQR)** was applied to `length_of_stay`. This approach limits the impact of outliers without imposing distributional assumptions or altering the rank order of the majority of observations.\n",
+    "\n",
+    "Variables such as `total_charges` and `total_costs` were excluded earlier in the pipeline as hard sources of target leakage and are therefore not available for outlier treatment or modeling.\n"
    ]
   },
   {
@@ -2561,7 +2525,7 @@
    "id": "b650fd9a",
    "metadata": {},
    "source": [
-    "Variance Inflation Factor (VIF) analysis confirms excellent multicollinearity diagnostics across the 9 selected features, with all VIF values below 10 (median 3.4) indicating negligible collinearity and highly stable coefficient estimates suitable for health services research. The highest VIF of 7.55 for age_group_70 or Older reflects expected hierarchical correlation among age dummies but remains clinically plausible and numerically acceptable, while ethnicity_Unknown (VIF=1.08) demonstrates perfect independence. Payment typology and admission type indicators show clean orthogonality (VIF 2.4-3.5), validating the feature engineering process that preserved clinical distinctiveness while eliminating redundancy. This optimal specification supports proceeding to Poisson GLM estimation with confidence in coefficient interpretability, standard error validity, and predictive robustness.\n"
+    "Variance Inflation Factor (VIF) analysis confirms detailled multicollinearity diagnostics across the 9 selected features, with all VIF values below 10 (median 3.4) indicating negligible collinearity and highly stable coefficient estimates suitable for health services research. The highest VIF of 7.55 for age_group_70 or Older reflects expected hierarchical correlation among age dummies but remains clinically plausible and numerically acceptable, while ethnicity_Unknown (VIF=1.08) demonstrates perfect independence. Payment typology and admission type indicators show clean orthogonality (VIF 2.4-3.5), validating the feature engineering process that preserved clinical distinctiveness while eliminating redundancy. This optimal specification supports proceeding to Poisson GLM estimation with confidence in coefficient interpretability, standard error validity, and predictive robustness.\n"
    ]
   },
   {
@@ -2960,21 +2924,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 13. Predictive modeling strategy\n",
+    "## 13. Predictive Modeling Strategy\n",
     "\n",
-    "Modeling is conducted under a supervised learning framework with the\n",
-    "primary objective of predicting hospital length of stay.\n",
-    "Models are evaluated using out-of-sample performance metrics to assess\n",
-    "generalization to unseen data.\n",
+    "Modeling is conducted under a supervised learning framework with the primary objective of predicting hospital length of stay (LOS). Following preprocessing, LOS is treated as a continuous outcome reflecting inpatient utilization intensity rather than as a strict count of hospital days. Models are evaluated using out-of-sample performance metrics to assess generalization to unseen data.\n",
     "\n",
-    "- Linear regression (Length of Stay).\n",
-    "- Logistic regression (binary outcomes).\n",
+    "The modeling approaches considered include:\n",
     "\n",
-    "All models are interpreted within an associational framework.\n",
+    "- Linear regression models for continuous LOS outcomes.\n",
+    "- Logistic regression models for selected binary outcomes derived from admission-time information.\n",
     "\n",
-    "Predictions are assumed to be made at the time of hospital admission,\n",
-    "using only information that would be available at or near admission.\n",
-    "**Variables generated during hospitalization or at discharge are therefore excluded** to prevent target leakage.\n"
+    "All models are interpreted within an associational (non-causal) framework. Coefficient estimates are examined for directional plausibility and predictive contribution rather than for structural or causal interpretation.\n",
+    "\n",
+    "Predictions are assumed to be generated at the time of hospital admission, using only variables available at or near admission. Variables determined during hospitalization or at discharge are explicitly excluded from feature selection, model training, and performance evaluation in order to prevent target leakage and ensure realistic predictive deployment.\n",
+    "\n"
    ]
   },
   {
@@ -3445,7 +3407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "4adf55d2",
    "metadata": {},
    "outputs": [
@@ -3684,7 +3646,7 @@
    "id": "2dc3fb82",
    "metadata": {},
    "source": [
-    "The ROC curve shows XGBoost+SMOTE achieving AUC = 0.75, indicating meaninful discriminatory ability for routine vs non-routine discharge prediction. The confusion matrix reveals strong performance on routine discharges (6785/8555 correctly predicted, 79% recall) and clinically actionable non-routine detection (962/1862, 52% recall, 35% precision), trading accuracy (74% vs 82% baseline) for high-risk case identification. The precision-recall curve confirms high AP = 0.930 driven by excellent routine-class performance, while threshold 0.35 balances 52% non-routine sensitivity against acceptable false positives - demonstrating administrative data's realistic limits and operational value for discharge planning.\n"
+    "The ROC curve shows XGBoost+SMOTE achieving AUC = 0.75, indicating meaninful discriminatory ability for routine vs non-routine discharge prediction. The confusion matrix reveals strong performance on routine discharges (6785/8555 correctly predicted, 79% recall) and clinically actionable non-routine detection (962/1862, 52% recall, 35% precision), trading accuracy (74% vs 82% baseline) for high-risk case identification. The precision-recall curve confirms high AP = 0.930 driven by remarkable routine-class performance, while threshold 0.35 balances 52% non-routine sensitivity against acceptable false positives - demonstrating administrative data's realistic limits and operational value for discharge planning.\n"
    ]
   },
   {
