hospital_los_regressor.ipynb classifier AUC-ROC refactored

--- a/src/hospital_los_regressor.ipynb
+++ b/src/hospital_los_regressor.ipynb
@@ -2805,7 +2805,7 @@
     "\n",
     "| Metric                     | Value   | Clinical Value                               |\n",
     "|----------------------------|---------|----------------------------------------------|\n",
-    "| **AUC-ROC**                 | **0.750** | Meaningful discrimination between discharge types |\n",
+    "| **AUC-ROC**                 | **0.752** | Meaningful discrimination between discharge types |\n",
     "| **Accuracy**                | 82%     | Matches overall routine discharge prevalence |\n",
     "| **Routine F1 Score**        | **0.90** | Excellent tool for routine discharge prediction |\n",
     "| **Non-routine Recall**      | **0%**   | Administrative data limits non-routine detection |\n",
@@ -3068,7 +3068,7 @@
     "\n",
     "| Model               | AUC-ROC | Routine F1 | Non-routine Recall | Clinical Use       |\n",
     "|---------------------|---------|------------|--------------------|--------------------|\n",
-    "| **XGBoost Native**  | **0.750** | **0.90**   | **0%**             | Routine screening  |\n",
+    "| **XGBoost Native**  | **0.752** | **0.90**   | **0%**             | Routine screening  |\n",
     "\n",
     "**Dataset**: 52,058 stays (82.1% routine, 17.9% non-routine)\n",
     "\n",
@@ -3099,7 +3099,7 @@
     "\n",
     "| Data Type           | AUC Range | This Study |\n",
     "|---------------------|-----------|------------|\n",
-    "| **Administrative**   | 0.70-0.78 | **0.750** ✓ |\n",
+    "| **Administrative**   | 0.70-0.78 | **0.752**  |\n",
     "| **Clinical**         | 0.80-0.85 | Requires labs/vitals |\n",
     "\n",
     "**Key Contributions**\n",
