--- a/src/hospital_los_regressor.ipynb
+++ b/src/hospital_los_regressor.ipynb
@@ -998,7 +998,7 @@
       "   11. Race\n",
       "   12. Type of Admission\n",
       "\n",
-      "Dropped columns: {'Hospital Service Area', 'Hospital County', 'Discharge Year', 'Zip Code - 3 digits', 'Birth Weight'}\n",
+      "Dropped columns: {'Hospital Service Area', 'Discharge Year', 'Zip Code - 3 digits', 'Hospital County', 'Birth Weight'}\n",
       "\n",
       "Rows preserved: 100.0%\n"
      ]
@@ -2337,7 +2337,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.128\n",
       "Method:                 Least Squares   F-statistic:                     1154.\n",
       "Date:                Sun, 04 Jan 2026   Prob (F-statistic):               0.00\n",
-      "Time:                        13:45:03   Log-Likelihood:                -54551.\n",
+      "Time:                        13:55:19   Log-Likelihood:                -54551.\n",
       "No. Observations:               52034   AIC:                         1.091e+05\n",
       "Df Residuals:                   52024   BIC:                         1.092e+05\n",
       "Df Model:                           9                                         \n",
@@ -2960,7 +2960,7 @@
       "Link Function:                  Logit   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -20853.\n",
       "Date:                Sun, 04 Jan 2026   Deviance:                       41706.\n",
-      "Time:                        13:45:08   Pearson chi2:                 5.02e+04\n",
+      "Time:                        13:55:22   Pearson chi2:                 5.02e+04\n",
       "No. Iterations:                     8   Pseudo R-squ. (CS):             0.1290\n",
       "Covariance Type:            nonrobust                                         \n",
       "====================================================================================================\n",
@@ -3091,8 +3091,7 @@
     "**Methodological Rigor**\n",
     "- **No target leakage**: Dropped disposition, APR severity, charges\n",
     "- **HC1 robust SEs**, VIF < 10 for all models\n",
-    "- **Native XGBoost vs SMOTE comparison**\n",
-    "- **F1-optimized thresholds**: 0.804 (native), 0.35 (SMOTE)\n",
+    "- **F1-optimized thresholds**: 0.804 (native)\n",
     "- **5-fold CV validation** on all metrics\n",
     "\n",
     "**Performance Comparison**\n",
@@ -3104,10 +3103,9 @@
     "\n",
     "**Key Contributions**\n",
     "1. **State-of-the-art administrative benchmarks**: R² = 0.162 (LoS), AUC = 0.752 (discharge)\n",
-    "2. **52% high-risk capture possible** with SMOTE at operational threshold (0.35)  \n",
-    "3. **Quantified administrative ceiling** vs clinical models\n",
-    "4. **Clinically actionable routine screening** (F1 = 0.90)\n",
-    "5. **Fully reproducible pipeline** for hospital operations research\n",
+    "2. **Quantified administrative ceiling** vs clinical models\n",
+    "3. **Clinically actionable routine screening** (F1 = 0.90)\n",
+    "4. **Fully reproducible pipeline** for hospital operations research\n",
     "\n",
     "*Note on Minority Class Recall**\n",
     "The 0% recall for the minority class (non-routine discharges) is a significant limitation, as it implies the model fails to detect any non-routine discharges in certain operational contexts. This poses challenges for clinical and operational decision-making, as non-routine discharges may require critical interventions or follow-up care that the model overlooks.\n"
