--- a/src/hospital_los_regressor.ipynb
+++ b/src/hospital_los_regressor.ipynb
@@ -14,12 +14,17 @@
     "\n",
     "**Disclaimer:**\n",
     "\n",
-    "- The notebook is provided \"as is\", without warranty of any kind. The author is not liable for any claims or damages arising from the use of this notebook.\n",
+    "- This notebook is provided *“as is”*, without warranty of any kind, express or implied.\n",
+    "- The author assumes no responsibility or liability for any errors, omissions, or outcomes resulting from the use of this notebook or its contents.\n",
+    "- All analyses and interpretations are for **educational and research purposes only** and do not constitute medical or clinical advice.\n",
     "\n",
     "**Dataset Note:**\n",
     "\n",
     "- The analyses are based on the SPARCS Hospital Inpatient Discharges dataset \n",
     "(NYC, Richmond County, 2023), licensed under the **Open Database License (ODbL)**\n",
+    "- The dataset is fully **de-identified** and contains self-reported health, behavioral, and demographic indicators.\n",
+    "\n",
+    "---\n",
     "\n"
    ]
   },
