--- a/src/hospital_los_regressor.ipynb
+++ b/src/hospital_los_regressor.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Predictive Pipeline: 'Length of Stay' Regression and 'Discharge' disposition Classification\n",
+    "# 'Length of Stay' Regression and 'Discharge' disposition Classification\n",
     "\n",
     "**Dataset:** [SPARCS Hospital Inpatient Discharges – New York City (Richmond County, 2023)](https://healthdata.gov/dataset/Hospital-Inpatient-Discharges-SPARCS-De-Identified/tpup-hey9/data_preview)\n",
     "\n",
@@ -1024,7 +1024,7 @@
       "   11. Race\n",
       "   12. Type of Admission\n",
       "\n",
-      "Dropped columns: {'Hospital County', 'Zip Code - 3 digits', 'Birth Weight', 'Discharge Year', 'Hospital Service Area'}\n",
+      "Dropped columns: {'Zip Code - 3 digits', 'Hospital Service Area', 'Discharge Year', 'Hospital County', 'Birth Weight'}\n",
       "\n",
       "Rows preserved: 100.0%\n"
      ]
@@ -2362,8 +2362,8 @@
       "Dep. Variable:                log_los   R-squared:                       0.128\n",
       "Model:                            OLS   Adj. R-squared:                  0.128\n",
       "Method:                 Least Squares   F-statistic:                     1154.\n",
-      "Date:                Sun, 04 Jan 2026   Prob (F-statistic):               0.00\n",
-      "Time:                        16:35:59   Log-Likelihood:                -54551.\n",
+      "Date:                Tue, 06 Jan 2026   Prob (F-statistic):               0.00\n",
+      "Time:                        20:08:31   Log-Likelihood:                -54551.\n",
       "No. Observations:               52034   AIC:                         1.091e+05\n",
       "Df Residuals:                   52024   BIC:                         1.092e+05\n",
       "Df Model:                           9                                         \n",
@@ -2984,8 +2984,8 @@
       "Model Family:                Binomial   Df Model:                            9\n",
       "Link Function:                  Logit   Scale:                          1.0000\n",
       "Method:                          IRLS   Log-Likelihood:                -20853.\n",
-      "Date:                Sun, 04 Jan 2026   Deviance:                       41706.\n",
-      "Time:                        16:36:05   Pearson chi2:                 5.02e+04\n",
+      "Date:                Tue, 06 Jan 2026   Deviance:                       41706.\n",
+      "Time:                        20:08:34   Pearson chi2:                 5.02e+04\n",
       "No. Iterations:                     8   Pseudo R-squ. (CS):             0.1290\n",
       "Covariance Type:            nonrobust                                         \n",
       "====================================================================================================\n",
