license and copyrigth

--- a/src/hospital_los_regressor.ipynb
+++ b/src/hospital_los_regressor.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "### Copyright and License\n",
     "\n",
-    "© 2026, Isabel Bejerano Blazquez\n",
+    "© 2026, Isabel Bejerano-Blazquez\n",
     "\n",
     "This Jupyter Notebook is licensed under the **MIT License**. \n",
     "\n",
